feat(security): implement comprehensive security hardening and API gateway
Security improvements including OWASP-compliant headers, httpOnly JWT cookies, Spring Cloud Gateway, and extensive test coverage